# OopsKart

./: README.md
Backend/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
Backend/core/accounts/: jwt.py  tests.py  urls.py  views.py
Backend/core/core/: models.py  settings.py  urls.py
Backend/core/core/utils/: test.py
Backend/core/product/: admin.py  constants.py  enums.py  models.py  serializers.py  tests.py  urls.py  views.py
Backend/core/product/migrations/: 0001_initial.py  0002_alter_productcategory_name_productattributes_and_more.py  0002_product_product_description.py  0003_alter_product_options_and_more.py  0004_alter_product_original_price.py
Backend/core/product/serializers/: __init__.py  product.py
Backend/core/product/urls/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: ProductList.js  auth.js
frontend/src/components/Footer/: index.jsx
frontend/src/components/LoginForm/: LoginForm.jsx
frontend/src/components/Navbar/: index.jsx  navlist.jsx
frontend/src/components/SignUpForm/: SignUpForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useFetch.js
frontend/src/pages/Login/: index.jsx
frontend/src/pages/MarketPlace/: ProductListCard.jsx  ProductListSection.jsx  index.jsx
frontend/src/pages/Signup/: index.jsx
frontend/src/utils/: PrivateRoute.jsx
